--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -2,7 +2,7 @@
     -webkit-box-shadow: 3px 2px 13px 1px rgba(110,98,110,0.7);
     -moz-box-shadow: 3px 2px 13px 1px rgba(110,98,110,0.7);
     box-shadow: 3px 2px 13px 1px rgba(110,98,110,0.7);
-
+    margin: 50px auto 0 auto;
     
     background-color: #f0f0f0;
     .flex-box {
